# Controle_De_Estoque

./: CMakeLists.txt  EstocomInstall.iss  Estoque.txt  README.md  conEst.cpp
libsBack/: add.cpp  add.h  del.cpp  del.h  read.cpp  read.h  up.cpp  up.h
libsFront/: user_Interaction.h  user_interaction.cpp
vs/estocon/: estocon.sln
vs/estocon/ConsoleApplication2/: ConsoleApplication2.vcxproj
